@@ -63,6 +63,9 @@ __PACKAGE__->meta->columns(
   dunning_ar_amount_interest                => { type => 'integer' },
   dunning_creator                           => { type => 'enum', check_in => [ 'current_employee', 'invoice_employee' ], db_type => 'dunning_creator', default => 'current_employee' },
   duns                                      => { type => 'text' },
+  email_attachment_part_files_checked       => { type => 'boolean', default => 'true' },
+  email_attachment_record_files_checked     => { type => 'boolean', default => 'true' },
+  email_attachment_vc_files_checked         => { type => 'boolean', default => 'true' },
   email_journal                             => { type => 'integer', default => 2 },
   expense_accno_id                          => { type => 'integer' },
   fa_bufa_nr                                => { type => 'text' },
