@@ -2349,6 +2349,12 @@ $self->{texts} = {
   'Prepare bank collection via SEPA XML' => 'Einzug via SEPA XML vorbereiten',
   'Prepare bank transfer via SEPA XML' => 'Überweisung via SEPA XML vorbereiten',
   'Prepayment'                  => 'Vorauszahlung',
+  'Preselect Customer/Vendor documents as email attachments' => 'Vorausgewählte Kunden-/Lieferantendokumente im E-Mail-Anhang',
+  'Preselect all documents for the current selected parts in a record as a mail attachment.' => 'Wählt alle Artikel-Dokumente der aktuellen Artikel des Belegs beim E-Mail-Versand aus.',
+  'Preselect all documents saved for the current customer/vendor as a mail attachment.' => 'Wählt alle Kunden/Lieferanten-Dokumente beim E-Mail-Versand eines Belegs aus.',
+  'Preselect all documents saved for the current record as a mail attachment.' => 'Wählt alle Dateianhänge des aktuellen Belegs beim E-Mail-Versand aus.',
+  'Preselect part documents as email attachments' => 'Vorausgewählte Artikeldokumente im E-Mail-Anhang',
+  'Preselect record documents as email attachments' => 'Vorausgewählte Dateianhänge im E-Mail-Anhang',
   'Preselected bin'             => 'Vorausgewählter Lagerplatz',
   'Preselected cutoff date'     => 'Vorausgewählter Stichtag',
   'Preselected warehouse'       => 'Vorausgewähltes Lager',
