@@ -3,7 +3,7 @@
 
 [% BLOCK attach_file_list %]
   [% IF files.as_list.size %]
-   [% SET have_files = 1 ;
+   [% SET have_files = 1;
       FOREACH file = files.as_list %]
     <tr>
      <th align="right" nowrap>
@@ -12,7 +12,11 @@
       [% END %]
      </th>
      <td>
-      [% P.checkbox_tag("email_form.attach_file_ids[]", label=file.db_file.file_name, value=file.db_file.id, checked="1") %]
+      [% IF checked %]
+        [% P.checkbox_tag("email_form.attach_file_ids[]", label=file.db_file.file_name, value=file.db_file.id, checked="1") %]
+      [% ELSE %]
+        [% P.checkbox_tag("email_form.attach_file_ids[]", label=file.db_file.file_name, value=file.db_file.id, checked="0") %]
+      [% END %]
      </td>
     </tr>
    [% END %]
@@ -87,14 +91,17 @@
 [% IF INSTANCE_CONF.get_doc_storage %]
   [% PROCESS attach_file_list
              files = FILES.files
+             checked = INSTANCE_CONF.get_email_attachment_record_files_checked
              label = LxERP.t8("Record's files") %]
 
   [% PROCESS attach_file_list
              files = FILES.vc_files
+             checked = INSTANCE_CONF.get_email_attachment_vc_files_checked
              label = is_customer ? LxERP.t8("Files from customer") : LxERP.t8("Files from vendor") %]
 
   [% PROCESS attach_file_list
              files = FILES.part_files
+             checked = INSTANCE_CONF.get_email_attachment_part_files_checked
              label = LxERP.t8("Files from parts") %]
 [% END %]
  </tbody>
